--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,17 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html,
+/* html,
 body {
   @apply bg-gray-50 dark:bg-gray-900;
+} */
+
+@viewport {
+  viewport-fit: cover;
+}
+
+@media screen and (display-mode: standalone) {
+  header {
+    height: 88px !important;
+  }
 }
